--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "cloud-nodejs",
   "version": "0.0.1",
   "description": "node.js: Build a Web App using Google Cloud Platform For IKEA",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/googlesamples/io2015-codelabs"
+  },
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
